--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
           <a href="#" class="hero-button">Try it</a>
         </div>
       </section>
-      <section class="new">
-        <div class="arrivals">
-          <h2>New arrivals</h2>
-          <img src="images/2.png" alt="" />
-        </div>
-      </section>
       <section class="favourites">
         <h2>Most favourite drinks</h2>
         <div class="favourite-grid">
@@ -197,7 +191,9 @@
         <p>Copyright ©2024 Zima juice</p>
       </div>
     </footer>
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <button id="backToTop" title="Go to top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <script src="js/main.js"></script>
   </body>
 </html>
