--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
         <p>Copyright ©2024 Zima juice</p>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
