--- a/product.html
+++ b/product.html
@@ -211,6 +211,9 @@
         <p>Copyright ©2024 Zima juice</p>
       </div>
     </footer>
+    <button id="backToTop" title="Go to top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
   </body>
